Now creates machine correctly

--- a/terraform/local-cloud/user_data.cfg
+++ b/terraform/local-cloud/user_data.cfg
@@ -2,10 +2,13 @@
 ssh_pwauth: true
 chpasswd:
   list: |
-     ubuntu:terraform-libvirt-linux
+     ubuntu:ubuntu
   expire: false
 users:
   - name: ubuntu
     sudo: ALL=(ALL) NOPASSWD:ALL
+    groups: sudo
+    lock_passwd: false
+    shell: /bin/bash
     ssh_authorized_keys:
       - ${ssh_authorized_key}
