--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -6,6 +6,7 @@
   vars:
     kubernetes_version: "1.34"
     cni_plugin: "calico"
+    helm_version: "3.19.0"
   roles:
     - prereqs
     - containerd
