Workers connect to master

--- a/ansible/roles/cni/tasks/main.yml
+++ b/ansible/roles/cni/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: Install CNI plugin
+  when: "'master' in group_names"
   shell: |
     if [ "{{ cni_plugin }}" = "calico" ]; then
       kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.0/manifests/calico.yaml
