--- a/ansible/roles/cni/tasks/main.yml
+++ b/ansible/roles/cni/tasks/main.yml
@@ -3,7 +3,9 @@
   when: "'master' in group_names"
   shell: |
     if [ "{{ cni_plugin }}" = "calico" ]; then
-      kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.0/manifests/calico.yaml
+      # kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.0/manifests/calico.yaml
+      kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.5/manifests/tigera-operator.yaml
+      kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.5/manifests/custom-resources.yaml
     else
       kubectl apply -f https://github.com/flannel-io/flannel/releases/latest/download/kube-flannel.yml
     fi
