--- a/cluster/apps/harbor/helmrelease.yml
+++ b/cluster/apps/harbor/helmrelease.yml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: harbor
-      version: 2.1
+      version: "2.1"
       sourceRef:
         kind: HelmRepository
         name: harbor
