--- a/cluster/apps/harbor/helmrelease.yml
+++ b/cluster/apps/harbor/helmrelease.yml
@@ -2,14 +2,15 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: harbor
-  namespace: harbor
+  namespace: flux-system
 spec:
   interval: 5m
   releaseName: harbor
+  targetNamespace: harbor
   chart:
     spec:
       chart: harbor
-      version: "2.1"
+      version: "2.1.*"
       sourceRef:
         kind: HelmRepository
         name: harbor
