--- a/ansible/roles/cni/tasks/main.yml
+++ b/ansible/roles/cni/tasks/main.yml
@@ -3,10 +3,17 @@
   when: "'master' in group_names"
   shell: |
     if [ "{{ cni_plugin }}" = "calico" ]; then
-      # kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.0/manifests/calico.yaml
+      # Install Operator
       kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.5/manifests/tigera-operator.yaml
-      kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.28.5/manifests/custom-resources.yaml
-    else
+      # Download custom-resources.yaml
+      curl -sS -o /tmp/custom-resources.yaml \
+        https://raw.githubusercontent.com/projectcalico/calico/v3.28.5/manifests/custom-resources.yaml
+
+      # Change Calico IPPool CIDR from 192.168.0.0/16 to 10.244.0.0/16
+      sed -i 's/cidr: 192\.168\.0\.0\/16/cidr: 10.244.0.0\/16/' /tmp/custom-resources.yaml
+
+      # Apply modified custom resources
+      kubectl apply -f /tmp/custom-resources.yaml    else
       kubectl apply -f https://github.com/flannel-io/flannel/releases/latest/download/kube-flannel.yml
     fi
   args:
